// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridCell renders correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "margin": 0,
        },
        Object {
          "height": 250,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "flex": 1,
            "height": null,
          },
          Object {
            "width": 250,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`PostCell renders correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#6ED4C8",
        "borderBottomWidth": 1,
        "borderColor": "#000000",
        "borderRadius": 5,
        "borderWidth": 1,
        "elevation": 1,
        "flex": 1,
        "justifyContent": "flex-start",
        "marginLeft": 5,
        "marginRight": 5,
        "marginTop": 10,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "marginLeft": 10,
          "marginRight": 10,
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
          "marginLeft": 10,
          "marginRight": 10,
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    />
  </View>
</View>
`;
